--- a/webapp/src/app/professor/vms/tab-vms.component.html
+++ b/webapp/src/app/professor/vms/tab-vms.component.html
@@ -1,34 +1,34 @@
 <div class="container">
-    <h2>VMs</h2>
-
-    <!-- Assignments in course table -->
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-      
-      <!-- Assignment Serial Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-      </ng-container>
-
-      <!-- Assignment NAME Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-
-      <!-- Assignment PATH Column -->
-      <ng-container matColumnDef="team">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Team </th>
-        <td mat-cell *matCellDef="let element"> {{element.team ? element.team.name : ''}} </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
-      <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
-    </table>
-
-    <!-- Table data paginator -->
-    <mat-paginator
-      [pageSize]="5"
-      [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons>
-    </mat-paginator>
-  </div>
+    <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
+        <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSource.data">
+            <mat-card class="mat-elevation-z4">
+                <mat-card-header>
+                    <mat-card-title>VM{{vm.id}} {{vm.name}}</mat-card-title>
+                </mat-card-header>
+                <!--        <img mat-card-image src="./../assets/images/mountains.jpg" />-->
+                <mat-card-content>
+                    VM configuration:
+                    <ul>
+                        <li>
+                            <span class="badge">Path:</span> {{vm.path}}
+                        </li>
+                        <li>
+                            <span class="badge">vCPU:</span> {{vm.vCpu}} in use
+                        </li>
+                        <li>
+                            <span class="badge">RAM:</span> {{vm.ram}}GB
+                        </li>
+                        <li>
+                            <span class="badge">Disk:</span> {{vm.disk}}GB
+                        </li>
+                    </ul>
+                </mat-card-content>
+                <mat-card-actions align="end">
+                    <button mat-raised-button color="primary" (click)="connectToVm(vm.id)">CONNECT</button>
+                    <button mat-raised-button color="warn" (click)="killVm(vm.id)">KILL</button>
+                    <button mat-icon-button (click)="openDialog(vm.id)"><mat-icon>more_vert</mat-icon></button>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
+</div>
