--- a/webapp/src/app/student/vms/tab-vms.component.html
+++ b/webapp/src/app/student/vms/tab-vms.component.html
@@ -1,26 +1,32 @@
 <div class="container">
-    <!-- Vms -->
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-        
-        <!-- VM Id Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
-  
-        <!-- VM NAME Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-  
-        <!-- VM path Column -->
-        <ng-container matColumnDef="path">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Path </th>
-          <td mat-cell *matCellDef="let element"> {{element.path}} </td>
-        </ng-container>
-  
-        <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
-        <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
-      </table>  
+    <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
+        <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSource.data">
+            <mat-card class="mat-elevation-z4">
+                <mat-card-header>
+                    <mat-card-title>VM{{vm.id}} {{vm.name}}</mat-card-title>
+                </mat-card-header>
+                <!--        <img mat-card-image src="./../assets/images/mountains.jpg" />-->
+                <mat-card-content>
+                    VM configuration:
+                    <ul>
+                        <li>
+                            <span class="badge">Path:</span> {{vm.path}}
+                        </li>
+                        <li>
+                            <span class="badge">vCPU:</span> {{vm.vCpu}} in use
+                        </li>
+                        <li>
+                            <span class="badge">RAM:</span> {{vm.ram}}GB
+                        </li>
+                        <li>
+                            <span class="badge">Disk:</span> {{vm.disk}}GB
+                        </li>
+                    </ul>
+                </mat-card-content>
+                <mat-card-actions align="end">
+                    <button mat-raised-button color="primary" (click)="connectToVm(vm.id)">CONNECT TO VM</button>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
 </div>
