Add new vm button with dialog

--- a/webapp/src/app/professor/vms/tab-vms.component.html
+++ b/webapp/src/app/professor/vms/tab-vms.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+    <button mat-raised-button color="primary" (click)="newVm()">New VM</button>
+    <mat-divider></mat-divider>
     <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
         <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSource.data">
             <mat-card class="mat-elevation-z4">
