--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -18,3 +18,6 @@ mat-form-field {width: 30%;}
 table {width: 100%;}
 
 mat-card-content { padding: 16px; }
+
+mat-divider { margin-top: 10px !important; margin-bottom: 10px !important; }
+
