Add vm models view for admin

--- a/webapp/src/app/admin/professors/tab-professors.container.html
+++ b/webapp/src/app/admin/professors/tab-professors.container.html
@@ -1,1 +1,1 @@
-<div class="container">Da implementare il .component</div>
+<app-tab-admin-professors  [courseProfessors]="courseProfessors" [filteredProfessors]="filteredProfessors" (searchProfessorEvent)="searchProfessors($event)" (assignProfessorEvent)="assignProfessorsToCourse($event)" (removeProfessorEvent)="removeProfessorsFromCourse($event)"></app-tab-admin-professors>
