--- a/webapp/src/app/student/vms/tab-vms.component.html
+++ b/webapp/src/app/student/vms/tab-vms.component.html
@@ -21,6 +21,9 @@
                         <li>
                             <span class="badge">Disk:</span> {{vm.disk}}GB
                         </li>
+                        <li>
+                            <span class="badge">Created:</span> {{vm.creationDate}}
+                        </li>
                     </ul>
                 </mat-card-content>
                 <mat-card-actions align="end">
