--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -21,3 +21,15 @@ mat-card-content { padding: 16px; }
 
 mat-divider { margin-top: 10px !important; margin-bottom: 10px !important; }
 
+.mat-slider-thumb-label {
+  transform: rotate(45deg) !important;
+  border-radius: 50% 50% 0 !important;
+}
+
+.mat-slider-thumb {
+  transform: scale(0) !important;
+}
+
+.mat-slider-thumb-label-text {
+  opacity: 1 !important;
+}
