--- a/webapp/src/app/student/team/tab-no-team.component.html
+++ b/webapp/src/app/student/team/tab-no-team.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-  <h2>Choose your team</h2>
-
   <!-- Add student input field with autocomplete -->
-  <div class="container">
+  <div class="container part1">
+    <h2>Pick colleagues to forge your team</h2>
     <mat-form-field>
       <mat-label>Add Student</mat-label>
         <input matInput type="search"
@@ -18,8 +17,8 @@
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
-    <button mat-button>Add</button>
-  </div>
+    <button mat-button (click)="addWishMember(addStudentControl.value)">Add</button>
+  
 
   <!-- Students in course available table -->
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
@@ -27,18 +26,9 @@
     <!-- Checkbox Column description-->
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? masterToggle() : null"
-                      [checked]="selection.hasValue() && isAllSelected()"
-                      [indeterminate]="selection.hasValue() && !isAllSelected()"
-                      [aria-label]="checkboxLabel()">
-        </mat-checkbox>
       </th>
       <td mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()"
-                      (change)="$event ? selection.toggle(row) : null"
-                      [checked]="selection.isSelected(row)"
-                      [aria-label]="checkboxLabel(row)">
-        </mat-checkbox>
+        <button mat-button (click)="addWishMember(row)">Pick</button>
       </td>
     </ng-container>
       
@@ -69,4 +59,20 @@
     [pageSize]="5"
     [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons>
   </mat-paginator>
+  </div>
+  <div class="container part2">
+    <h2>Pick a name</h2>
+    <mat-form-field class="full-width-input">
+      <input matInput type="text" placeholder="Ex. Sprangular Control" [formControl]="teamNameControl" required>
+      <mat-error>Please provide a valid name</mat-error>
+    </mat-form-field>
+    <button mat-button class="submitter" (click)="submitTeam()">Submit Now</button>
+    <h2>Colleagues:</h2>
+    <mat-list>
+      <mat-list-item *ngFor="let chosen of chosenMembers">
+        {{displayFn(chosen)}}
+        <button mat-button color="warn" (click)="removeWishMember(chosen)">Remove</button>
+      </mat-list-item>
+    </mat-list>
+  </div>
 </div>
