--- a/webapp/src/app/student/vms/tab-vms.container.html
+++ b/webapp/src/app/student/vms/tab-vms.container.html
@@ -1,5 +1,5 @@
-<app-tab-student-vms [vms]="vms" *ngIf="vms.length; else elseBlock"></app-tab-student-vms>
+<h2 *ngIf="!team; else elseBlock">You need to join a team to use VMs</h2>
 <ng-template #elseBlock>
+    <app-tab-student-vms [vms]="vms" ></app-tab-student-vms>
     <button mat-raised-button color="primary" (click)="newVm()">New VM</button>
-    No Vms available
 </ng-template>
