fix linter problems

--- a/webapp/src/app/admin/vmmodels/tab-model.container.html
+++ b/webapp/src/app/admin/vmmodels/tab-model.container.html
@@ -1,1 +1,2 @@
-<app-tab-admin-vm-model-comp (searchVmModelEvent)="searchModels($event)" (assignVmModelEvent)="assignModel($event)" [vmModel]="model" [filteredVmModel]="filteredModels"></app-tab-admin-vm-model-comp>
+<app-tab-admin-vm-model-comp (searchVmModelEvent)="searchModels($event)" (assignVmModelEvent)="assignModel($event)"
+                             [vmModel]="model" [filteredVmModel]="filteredModels"></app-tab-admin-vm-model-comp>
