--- a/webapp/src/app/modals/login/login-dialog.component.css
+++ b/webapp/src/app/modals/login/login-dialog.component.css
@@ -1,2 +1,8 @@
-.full-width-input {width: 100%;}
-.centered {display: block; margin: auto;}
+.full-width-input {
+    width: 100%;
+}
+
+.centered {
+    display: block;
+    margin: auto;
+}
