--- a/webapp/src/app/modals/new-vm/new-vm.component.css
+++ b/webapp/src/app/modals/new-vm/new-vm.component.css
@@ -2,7 +2,10 @@ mat-form-field {
     width: 100%;
 }
 
-.centered {display: block; margin: auto;}
+.centered {
+    display: block;
+    margin: auto;
+}
 
 mat-slider {
     width: 100%;
