--- a/webapp/src/app/modals/register/register-dialog.component.html
+++ b/webapp/src/app/modals/register/register-dialog.component.html
@@ -3,41 +3,42 @@
 <div mat-dialog-content>
 
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <mat-error *ngIf="registerInvalid">Error while registering</mat-error>
-            
+        <mat-error *ngIf="registerInvalid">Error while registering</mat-error>
+
         <mat-form-field class="full-width-input">
-          <input matInput placeholder="Email" type="email" formControlName="email" required>
-          <mat-error>Please provide a valid email address</mat-error>
+            <input matInput placeholder="Email" type="email" formControlName="email" required>
+            <mat-error>Please provide a valid email address</mat-error>
         </mat-form-field>
 
         <mat-form-field class="full-width-input">
-          <input matInput placeholder="Name" type="text" formControlName="name" required>
-          <mat-error>Please provide a valid name address</mat-error>
-        </mat-form-field>
-          
-        <mat-form-field class="full-width-input">
-          <input matInput placeholder="Surname" type="text" formControlName="surname" required>
-          <mat-error>Please provide a valid surname address</mat-error>
+            <input matInput placeholder="Name" type="text" formControlName="name" required>
+            <mat-error>Please provide a valid name address</mat-error>
         </mat-form-field>
 
         <mat-form-field class="full-width-input">
-          <input matInput placeholder="Id" type="text" formControlName="id" required>
-          <mat-error>Please provide a valid id address</mat-error>
+            <input matInput placeholder="Surname" type="text" formControlName="surname" required>
+            <mat-error>Please provide a valid surname address</mat-error>
         </mat-form-field>
 
         <mat-form-field class="full-width-input">
-          <input matInput type="password" placeholder="Password" formControlName="password" required>
-          <mat-error>Please provide a valid password</mat-error>
+            <input matInput placeholder="Id" type="text" formControlName="id" required>
+            <mat-error>Please provide a valid id address</mat-error>
         </mat-form-field>
-        
+
+        <mat-form-field class="full-width-input">
+            <input matInput type="password" placeholder="Password" formControlName="password" required>
+            <mat-error>Please provide a valid password</mat-error>
+        </mat-form-field>
+
         <mat-form-field>
-          <ngx-mat-file-input formControlName="pic" placeholder="Basic Input" accept=".png, .pdf, .jpg, .jpeg"></ngx-mat-file-input>
-          <mat-icon matSuffix>folder</mat-icon>
-        </mat-form-field>    
-        
+            <ngx-mat-file-input formControlName="pic" placeholder="Basic Input"
+                                accept=".png, .pdf, .jpg, .jpeg"></ngx-mat-file-input>
+            <mat-icon matSuffix>folder</mat-icon>
+        </mat-form-field>
+
         <div mat-dialog-actions align="end">
-          <button mat-raised-button color="primary" (click)="onSubmit()">Register</button>
-          <button mat-button mat-dialog-close color="warn">Cancel</button>
+            <button mat-raised-button color="primary" (click)="onSubmit()">Register</button>
+            <button mat-button mat-dialog-close color="warn">Cancel</button>
         </div>
-      </form>
+    </form>
 </div>
