--- a/webapp/src/app/professor/vms/tab-vms.container.html
+++ b/webapp/src/app/professor/vms/tab-vms.container.html
@@ -1,1 +1,1 @@
-<app-tab-professor-vms [vms]="vms"></app-tab-professor-vms>
+<app-tab-professor-vms [vms]="vms" (wipeVmEvent)="wipeVm($event)" (connectVmEvent)="connect($event)"></app-tab-professor-vms>
