--- a/webapp/src/app/student/team/tab-no-team.component.html
+++ b/webapp/src/app/student/team/tab-no-team.component.html
@@ -66,6 +66,12 @@
             <input matInput type="text" placeholder="Ex. Sprangular Control" [formControl]="teamNameControl" required>
             <mat-error>Please provide a valid name</mat-error>
         </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker" (dateChange)="selectDate($event.value)">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
         <button mat-button class="submitter" (click)="submitTeam()">Submit Now</button>
         <h2>Colleagues:</h2>
         <mat-list>
