--- a/webapp/src/app/student/vms/tab-vms.component.html
+++ b/webapp/src/app/student/vms/tab-vms.component.html
@@ -2,16 +2,9 @@
     <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
         <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSource.data">
             <mat-card class="mat-elevation-z4">
-                <mat-card-header>
-                    <mat-card-title>VM{{vm.id}} {{vm.name}}</mat-card-title>
-                </mat-card-header>
-                <!--        <img mat-card-image src="./../assets/images/mountains.jpg" />-->
                 <mat-card-content>
                     VM configuration:
                     <ul>
-                        <li>
-                            <span class="badge">Path:</span> {{vm.path}}
-                        </li>
                         <li>
                             <span class="badge">vCPU:</span> {{vm.vCpu}} in use
                         </li>
@@ -19,14 +12,13 @@
                             <span class="badge">RAM:</span> {{vm.ram}}GB
                         </li>
                         <li>
-                            <span class="badge">Disk:</span> {{vm.disk}}GB
-                        </li>
-                        <li>
-                            <span class="badge">Created:</span> {{vm.creationDate}}
+                            <span class="badge">Disk:</span> {{vm.diskStorage}}GB
                         </li>
                     </ul>
                 </mat-card-content>
                 <mat-card-actions align="end">
+                    <button mat-raised-button color="primary" (click)="addOwner(vm)">Add Owner</button>
+                    <button mat-raised-button color="primary" (click)="triggerTurn(vm.id)">TriggerTurn</button>
                     <button mat-raised-button color="primary" (click)="connectToVm(vm.id)">CONNECT TO VM</button>
                 </mat-card-actions>
             </mat-card>
