display vm image as modal and added keys to interact with vm
Signed-off-by: Simone Magnani <simonemagnani.96@gmail.com>

--- a/webapp/src/app/professor/vms/tab-vms.component.html
+++ b/webapp/src/app/professor/vms/tab-vms.component.html
@@ -18,6 +18,7 @@
                 </mat-card-content>
                 <mat-card-actions align="end">
                     <button mat-raised-button color="primary" (click)="connectToVm(vm.id)">CONNECT</button>
+                    <button mat-raised-button color="primary" (click)="triggerVm(vm.id)">Trigger On/Off</button>
                     <button mat-raised-button color="warn" (click)="killVm(vm.id)">KILL</button>
                     <button mat-icon-button (click)="openDialog(vm.id)">
                         <mat-icon>more_vert</mat-icon>
