--- a/webapp/src/app/modals/login/login-dialog.component.css
+++ b/webapp/src/app/modals/login/login-dialog.component.css
@@ -6,3 +6,12 @@
     display: block;
     margin: auto;
 }
+
+.mat-dialog-actions {
+    display: flex;
+    justify-content: center;
+}
+
+form {
+    height: 181px;
+}
