--- a/webapp/src/app/modals/register/register-dialog.component.css
+++ b/webapp/src/app/modals/register/register-dialog.component.css
@@ -11,3 +11,12 @@ mat-slider {
     width: 100%;
     margin-top: 12px;
 }
+
+.mat-dialog-actions {
+    display: flex;
+    justify-content: center;
+}
+
+form {
+    height: 407px;
+}
