New course button finished

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -43,7 +43,7 @@
 </mat-toolbar>
 
 <!-- Application views area -->
-<mat-sidenav-container [autosize]="true">
+<mat-sidenav-container>
   <!-- Left sidenav to choose current view course -->
   <mat-sidenav
     #sidebar
