--- a/webapp/src/app/modals/register/register-dialog.component.html
+++ b/webapp/src/app/modals/register/register-dialog.component.html
@@ -1,44 +1,90 @@
 <h1 mat-dialog-title>Register to VirtualLabs</h1>
 
 <div mat-dialog-content>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <mat-error *ngIf="registerInvalid">Error while registering</mat-error>
 
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <mat-error *ngIf="registerInvalid">Error while registering</mat-error>
+    <mat-form-field class="full-width-input">
+      <input
+        matInput
+        placeholder="Email"
+        type="email"
+        formControlName="email"
+        required
+      />
+      <mat-error>Please provide a valid email address</mat-error>
+    </mat-form-field>
 
-        <mat-form-field class="full-width-input">
-            <input matInput placeholder="Email" type="email" formControlName="email" required>
-            <mat-error>Please provide a valid email address</mat-error>
-        </mat-form-field>
+    <mat-form-field class="full-width-input">
+      <input
+        matInput
+        placeholder="Name"
+        type="text"
+        formControlName="name"
+        required
+      />
+      <mat-error>Please provide a valid name address</mat-error>
+    </mat-form-field>
 
-        <mat-form-field class="full-width-input">
-            <input matInput placeholder="Name" type="text" formControlName="name" required>
-            <mat-error>Please provide a valid name address</mat-error>
-        </mat-form-field>
+    <mat-form-field class="full-width-input">
+      <input
+        matInput
+        placeholder="Surname"
+        type="text"
+        formControlName="surname"
+        required
+      />
+      <mat-error>Please provide a valid surname address</mat-error>
+    </mat-form-field>
 
-        <mat-form-field class="full-width-input">
-            <input matInput placeholder="Surname" type="text" formControlName="surname" required>
-            <mat-error>Please provide a valid surname address</mat-error>
-        </mat-form-field>
+    <mat-form-field class="full-width-input">
+      <input
+        matInput
+        placeholder="Id"
+        type="text"
+        formControlName="id"
+        required
+      />
+      <mat-error>Please provide a valid id address</mat-error>
+    </mat-form-field>
 
-        <mat-form-field class="full-width-input">
-            <input matInput placeholder="Id" type="text" formControlName="id" required>
-            <mat-error>Please provide a valid id address</mat-error>
-        </mat-form-field>
+    <mat-form-field class="full-width-input">
+      <input
+        matInput
+        type="password"
+        placeholder="Password"
+        formControlName="password"
+        required
+      />
+      <mat-error>Please provide a valid password</mat-error>
+    </mat-form-field>
 
-        <mat-form-field class="full-width-input">
-            <input matInput type="password" placeholder="Password" formControlName="password" required>
-            <mat-error>Please provide a valid password</mat-error>
-        </mat-form-field>
+    <mat-form-field class="full-width-input">
+      <input
+        matInput
+        type="password"
+        placeholder="Repeat Password"
+        formControlName="passwordConfirm"
+        [errorStateMatcher]="matcher"
+      />
+      <mat-error *ngIf="form.hasError('notSame')">
+          The two password must match
+        </mat-error>
+    </mat-form-field>
 
-        <mat-form-field>
-            <ngx-mat-file-input formControlName="pic" placeholder="Profile Picture"
-                                accept=".png, .pdf, .jpg, .jpeg" required></ngx-mat-file-input>
-            <mat-icon matSuffix>folder</mat-icon>
-        </mat-form-field>
+    <mat-form-field>
+      <ngx-mat-file-input
+        formControlName="pic"
+        placeholder="Profile Picture"
+        accept=".png, .pdf, .jpg, .jpeg"
+        required
+      ></ngx-mat-file-input>
+      <mat-icon matSuffix>folder</mat-icon>
+    </mat-form-field>
 
-        <div mat-dialog-actions>
-            <button mat-raised-button color="primary">Register</button>
-            <button mat-button mat-dialog-close color="warn">Cancel</button>
-        </div>
-    </form>
+    <div mat-dialog-actions>
+      <button mat-raised-button color="primary">Register</button>
+      <button mat-button mat-dialog-close color="warn">Cancel</button>
+    </div>
+  </form>
 </div>
