--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -14,6 +14,31 @@ body {
   flex: 1 1 auto;
 }
 
+tr.example-detail-row {
+  height: 0 !important;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: whitesmoke;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  flex: 1 1 auto;
+}
+
+.example-element-description {
+  padding: 4px;
+}
+
 .tab-content {
   padding: 20px;
 }
