--- a/webapp/src/app/professor/vms/tab-vms.component.html
+++ b/webapp/src/app/professor/vms/tab-vms.component.html
@@ -6,7 +6,7 @@
                     VM configuration:
                     <ul>
                         <li>
-                            <span class="badge">vCPU:</span> {{vm.vCpu}} in use
+                            <span class="badge">vCPU:</span> {{vm.vcpu}} in use
                         </li>
                         <li>
                             <span class="badge">RAM:</span> {{vm.ram}}GB
