--- a/webapp/src/app/student/vms/tab-vms.component.html
+++ b/webapp/src/app/student/vms/tab-vms.component.html
@@ -3,10 +3,10 @@
         <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSource.data">
             <mat-card class="mat-elevation-z4">
                 <mat-card-content>
-                    VM configuration:
+                    VM {{vm.name}} configuration:
                     <ul>
                         <li>
-                            <span class="badge">vCPU:</span> {{vm.vCpu}} in use
+                            <span class="badge">vCPU:</span> {{vm.vcpu}} in use
                         </li>
                         <li>
                             <span class="badge">RAM:</span> {{vm.ram}}GB
