--- a/webapp/src/app/modals/new-vm/new-vm.component.html
+++ b/webapp/src/app/modals/new-vm/new-vm.component.html
@@ -1,33 +1,48 @@
 <h1 mat-dialog-title>Create a new VM</h1>
 
 <div mat-dialog-content>
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <mat-error *ngIf="vmInvalid">Error while creating VM</mat-error>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <mat-form-field>
+      <input
+        matInput
+        placeholder="VM Name"
+        type="text"
+        formControlName="name"
+        required
+      />
+      <mat-error>Cannot be empty</mat-error>
+    </mat-form-field>
 
-        <mat-form-field>
-            <input matInput
-                   placeholder="VM Name"
-                   type="text"
-                   formControlName="name"
-                   required
-            />
-            <mat-error>Cannot be empty</mat-error>
-        </mat-form-field>
+    <label>CPUs:</label>
+    <mat-slider
+      formControlName="vCpu"
+      [thumbLabel]="true"
+      min="1"
+      max="6"
+      step="1"
+    ></mat-slider>
 
-        <label>CPUs:</label>
-        <mat-slider formControlName="vCpu" [thumbLabel]="true" min="1" max="6" step="1"></mat-slider>
+    <label>RAM (GB):</label>
+    <mat-slider
+      formControlName="ram"
+      [thumbLabel]="true"
+      min="1"
+      max="6"
+      step="0.5"
+    ></mat-slider>
 
-        <label>RAM (GB):</label>
-        <mat-slider formControlName="ram" [thumbLabel]="true" min="1" max="6" step="0.5"></mat-slider>
-
-        <label>Disk (GB):</label>
-        <mat-slider formControlName="diskStorage" [thumbLabel]="true" min="1" max="15" step="1"></mat-slider>
-
-    </form>
+    <label>Disk (GB):</label>
+    <mat-slider
+      formControlName="diskStorage"
+      [thumbLabel]="true"
+      min="1"
+      max="20"
+      step="1"
+    ></mat-slider>
+  </form>
 </div>
 
 <div mat-dialog-actions align="end">
-    <button mat-button color="warn" (click)="dialogRef.close()">Back</button>
-    <button mat-button color="primary" (click)="onSubmit()">Create</button>
+  <button mat-raised-button color="primary" (click)="onSubmit()">Create</button>
+  <button mat-button color="warn" (click)="dialogRef.close()">Back</button>
 </div>
-
