--- a/webapp/src/app/student/team/tab-no-team.component.html
+++ b/webapp/src/app/student/team/tab-no-team.component.html
@@ -1,86 +1,104 @@
 <div class="container">
-    <!-- Add student input field with autocomplete -->
-    <div class="container part1">
-        <h2>Pick colleagues to forge your team</h2>
-        <mat-form-field>
-            <mat-label>Add Student</mat-label>
-            <input matInput type="search"
-                   placeholder="Add Student"
-                   aria-label="Number"
-                   matInput
-                   value=""
-                   [formControl]="addStudentControl"
-                   [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                <ng-container *ngFor="let option of filteredStudents | async">
-                    <mat-option *ngIf="option.id !== currentUser.id" [value]="option">
-                        {{displayFn(option)}}
-                    </mat-option>
-                </ng-container>
-            </mat-autocomplete>
-        </mat-form-field>
-        <button mat-button (click)="addWishMember(addStudentControl.value)">Add</button>
+  <!-- Add student input field with autocomplete -->
+  <div class="container part1">
+    <h2>Pick colleagues to forge your team</h2>
+    <mat-form-field>
+      <mat-label>Add Student</mat-label>
+      <input
+        matInput
+        type="search"
+        placeholder="Add Student"
+        aria-label="Number"
+        matInput
+        value=""
+        [formControl]="addStudentControl"
+        [matAutocomplete]="auto"
+      />
+      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+        <ng-container *ngFor="let option of filteredStudents | async">
+          <mat-option *ngIf="option.id !== currentUser.id" [value]="option">
+            {{ displayFn(option) }}
+          </mat-option>
+        </ng-container>
+      </mat-autocomplete>
+    </mat-form-field>
+    <button mat-button (click)="addWishMember(addStudentControl.value)">
+      Add
+    </button>
 
+    <!-- Students in course available table -->
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+      <!-- Checkbox Column description-->
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-button (click)="addWishMember(row)">Pick</button>
+        </td>
+      </ng-container>
 
-        <!-- Students in course available table -->
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+      <!-- Student Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+      </ng-container>
 
-            <!-- Checkbox Column description-->
-            <ng-container matColumnDef="select">
-                <th mat-header-cell *matHeaderCellDef>
-                </th>
-                <td mat-cell *matCellDef="let row">
-                    <button mat-button (click)="addWishMember(row)">Pick</button>
-                </td>
-            </ng-container>
+      <!-- Student Surname Column -->
+      <ng-container matColumnDef="surname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
+        <td mat-cell *matCellDef="let element">{{ element.surname }}</td>
+      </ng-container>
 
-            <!-- Student Id Column -->
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
-                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-            </ng-container>
+      <!-- Student NAME Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
 
-            <!-- Student Surname Column -->
-            <ng-container matColumnDef="surname">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Surname</th>
-                <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
-            </ng-container>
+      <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
+      <tr mat-row *matRowDef="let row; columns: colsToDisplay"></tr>
+    </table>
 
-            <!-- Student NAME Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
-            <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
-        </table>
-
-        <!-- Table data paginator -->
-        <mat-paginator
-                [pageSize]="5"
-                [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons>
-        </mat-paginator>
-    </div>
-    <div class="container part2">
-        <h2>Pick a name</h2>
-        <mat-form-field class="full-width-input">
-            <input matInput type="text" placeholder="Ex. Sprangular Control" [formControl]="teamNameControl" required>
-            <mat-error>Please provide a valid name</mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-            <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker" (dateChange)="selectDate($event.value.toString())">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-        <button mat-button class="submitter" (click)="submitTeam()">Submit Now</button>
-        <h2>Colleagues:</h2>
-        <mat-list>
-            <mat-list-item *ngFor="let chosen of chosenMembers">
-                {{displayFn(chosen)}}
-                <button mat-button color="warn" (click)="removeWishMember(chosen)">Remove</button>
-            </mat-list-item>
-        </mat-list>
-    </div>
+    <!-- Table data paginator -->
+    <mat-paginator
+      [pageSize]="5"
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      showFirstLastButtons
+    >
+    </mat-paginator>
+  </div>
+  <div class="container part2">
+    <h2>Pick a name</h2>
+    <mat-form-field class="full-width-input">
+      <input
+        matInput
+        type="text"
+        placeholder="Ex. Sprangular Control"
+        [formControl]="teamNameControl"
+        required
+      />
+      <mat-error>Please provide a valid name</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Choose a date</mat-label>
+      <input
+        matInput
+        [matDatepicker]="picker"
+        (dateChange)="selectDate($event.value.toString())"
+      />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <button mat-button class="submitter" (click)="submitTeam()">
+      Submit Now
+    </button>
+    <h2>Colleagues:</h2>
+    <mat-list>
+      <mat-list-item *ngFor="let chosen of chosenMembers">
+        {{ displayFn(chosen) }}
+        <button mat-button color="warn" (click)="removeWishMember(chosen)">
+          Remove
+        </button>
+      </mat-list-item>
+    </mat-list>
+  </div>
 </div>
