Add assignemnt tabs, with current assignments and expired assignment; add modal for new student upload

--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -100,3 +100,13 @@ mat-divider {
 mat-sidenav {
   width: 250px;
 }
+
+.centered {
+  display: block;
+  margin: auto;
+}
+
+mat-slider {
+  width: 100%;
+  margin-top: 12px;
+}
