--- a/webapp/src/app/student/assignments/tab-assignments.component.html
+++ b/webapp/src/app/student/assignments/tab-assignments.component.html
@@ -1,26 +1,65 @@
+<script src="../../modals/new-vm/new-vm.component.ts"></script>
+<script src="tab-expandend-assignment.component.ts"></script>
 <div class="container">
+    <h2>Next Assignments</h2>
     <!-- Assignments -->
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <table mat-table [dataSource]="regularDataSource" class="mat-elevation-z8" multiTemplateDataRows>
 
-        <!-- Assignment Id Column -->
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        <ng-container matColumnDef="{{column}}" *ngFor="let column of colsToDisplay">
+            <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+            <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
         </ng-container>
 
-        <!-- Assignment NAME Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-
-        <!-- Assignment path Column -->
-        <ng-container matColumnDef="path">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Path</th>
-            <td mat-cell *matCellDef="let element"> {{element.path}} </td>
+        <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="4">
+                <div class="example-element-detail"
+                     [@detailExpand]="element == regularExpandedElement ? 'expanded' : 'collapsed'">
+                <app-tab-expandend-assignment [element]="regularExpandedElement"
+                                              [solution]="regularAssignmentSolution"
+                                              [uploads]="regularAssignmentUploads"
+                                              [student]="currentStudent.id"
+                ></app-tab-expandend-assignment>
+                </div>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
-        <tr mat-row *matRowDef="let row; columns: colsToDisplay;"></tr>
+        <tr mat-row *matRowDef="let element; columns: colsToDisplay;"
+            class="example-element-row"
+            [class.example-expanded-row]="regularExpandedElement === element"
+            (click)='onClickElement(element, "regular")'>
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+    </table>
+
+    <h2 style="margin-top: 20px">Expired Assignments</h2>
+    <p>Here you can visualize old courses assignment. You can't upload anymore a new solution!</p>
+    <table mat-table [dataSource]="expiredDataSource" class="mat-elevation-z8" multiTemplateDataRows>
+
+        <ng-container matColumnDef="{{column}}" *ngFor="let column of colsToDisplay">
+            <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+            <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="colsToDisplay.length">
+                <div class="example-element-detail"
+                     [@detailExpand]="element == expiredExpandedElement ? 'expanded' : 'collapsed'">
+                    <app-tab-expandend-assignment [element]="expiredExpandedElement"
+                                                  [solution]="expiredAssignmentSolution"
+                                                  [uploads]="expiredAssignmentUploads"
+                                                  [student]="currentStudent.id"
+                    ></app-tab-expandend-assignment>
+                </div>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
+        <tr mat-row *matRowDef="let element; columns: colsToDisplay;"
+            class="example-element-row"
+            [class.example-expanded-row]="expiredExpandedElement === element"
+            (click)='onClickElement(element, "expired")'>
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
 </div>
