--- a/webapp/src/app/student/vms/tab-vms.container.html
+++ b/webapp/src/app/student/vms/tab-vms.container.html
@@ -1,2 +1,5 @@
 <app-tab-student-vms [vms]="vms" (turnVmEvent)="turnVm($event)" (addOwnerEvent)="addOwner($event)" (connectEvent)="connect($event)"></app-tab-student-vms>
-<button mat-raised-button color="primary" (click)="newVm()">New VM</button>
+<div *ngIf="inTeam$; else single">
+    <button mat-raised-button color="primary" (click)="newVm()">New VM</button>
+</div>
+<ng-template #single>You have to be member of a team to use vms.</ng-template>
