--- a/webapp/src/app/professor/vms/tab-vms.component.html
+++ b/webapp/src/app/professor/vms/tab-vms.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
         <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" fxFlex.md="50%" *ngFor="let vm of dataSource.data">
-            <mat-card class="mat-elevation-z4">
+            <mat-card class="mat-elevation-z4" [ngClass]="vm.active ? 'active' : 'inactive'">
                 <mat-card-content>
-                    VM configuration:
+                    VM "{{vm.id}} - {{vm.name}}" configuration:
                     <ul>
                         <li>
                             <span class="badge">vCPU:</span> {{vm.vcpu}} in use
@@ -18,8 +18,6 @@
                 </mat-card-content>
                 <mat-card-actions align="end">
                     <button mat-raised-button color="primary" (click)="connectToVm(vm.id)">CONNECT</button>
-                    <button mat-raised-button color="primary" (click)="triggerVm(vm.id)">Trigger On/Off</button>
-                    <button mat-raised-button color="warn" (click)="killVm(vm.id)">KILL</button>
                     <button mat-icon-button (click)="openDialog(vm.id)">
                         <mat-icon>more_vert</mat-icon>
                     </button>
