--- a/webapp/src/app/professor/professor.component.html
+++ b/webapp/src/app/professor/professor.component.html
@@ -1,13 +1,16 @@
 <!-- Tabs for the current view (Students / Teams / VMs) -->
-    <nav mat-tab-nav-bar>
-        <a mat-tab-link
-           *ngFor="let link of navLinks"
-           [routerLink]="link.path"
-           routerLinkActive #rla="routerLinkActive"
-           [active]="rla.isActive">
-            {{link.label}}
-        </a>
-    </nav>
-    <div class="tab-content">
-        <router-outlet></router-outlet>
-    </div>
+<nav mat-tab-nav-bar>
+  <a
+    mat-tab-link
+    *ngFor="let link of navLinks"
+    [routerLink]="link.path"
+    routerLinkActive
+    #rla="routerLinkActive"
+    [active]="rla.isActive"
+  >
+    {{ link.label }}
+  </a>
+</nav>
+<div class="tab-content">
+  <router-outlet></router-outlet>
+</div>
