add assignment mgmt for professor + many fixes
Signed-off-by: Riccardo Marchi <riccardo.marchi4@gmail.com>

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -4,36 +4,25 @@
     mat-icon-button
     aria-label="Menu icon"
     [disabled]="inModal"
-    (click)="sidebar.toggle()"
-  >
+    (click)="sidebar.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
-  <a mat-button [disabled]="inModal" [routerLink]="['/home']"
-    ><h2>VirtualLabs</h2></a
-  >
+  <button mat-button [disabled]="inModal" [routerLink]="['/home']"><h2>VirtualLabs</h2></button>
 
   <span class="example-fill-remaining-space"></span>
   <span *ngIf="currentUser">Welcome back, {{ currentUser.id }}</span>
   <div *ngIf="!currentUser; else elseBlock">
-    <button
-      mat-button
-      routerLink="/home"
-      [disabled]="inModal"
-      [queryParams]="{ doLogin: true }"
-    >
-      Login
-    </button>
-    <button
-      mat-button
-      routerLink="/home"
-      [disabled]="inModal"
-      [queryParams]="{ doRegister: true }"
-    >
-      Register
-    </button>
+    <button mat-button
+            routerLink="/home"
+            [disabled]="inModal"
+            [queryParams]="{ doLogin: true }">Login</button>
+    <button mat-button
+            routerLink="/home"
+            [disabled]="inModal"
+            [queryParams]="{ doRegister: true }">Register</button>
   </div>
   <ng-template #elseBlock>
-    <button mat-button (click)="logout()" *ngIf="currentUser">Logout</button>
+    <button mat-button [disabled]="inModal" (click)="logout()" *ngIf="currentUser">Logout</button>
   </ng-template>
 </mat-toolbar>
 
@@ -73,24 +62,19 @@
           [ngClass]="course.enabled ? 'enabled' : 'disabled'"
           [routerLink]="[
             currentUser.roles[0].toLowerCase().replace('role_', '') +
-              '/course/' +
-              course.acronym
-          ]"
-        >
-          {{ course.name }}
+              '/courses/' + course.acronym]">{{ course.name }}
         </mat-list-item>
         <div
           *ngIf="currentUser && currentUser.roles[0] === 'ROLE_PROFESSOR'"
-          class="plus-button-container"
-        >
+          class="plus-button-container">
           <button
             mat-fab
             color="primary"
             aria-label="Example icon button with a + icon"
             style="font-size: 25px"
-            (click)="newCourse()"
-          >
-            +
+            [routerLink]=""
+            [disabled]="inModal"
+            [queryParams]="{ addCourse: true }">+
           </button>
         </div>
       </mat-nav-list>
