--- a/webapp/src/app/modals/new-course/new-course-dialog.component.css
+++ b/webapp/src/app/modals/new-course/new-course-dialog.component.css
@@ -2,12 +2,11 @@ mat-form-field {
     width: 100%;
 }
 
-.centered {
-    display: block;
-    margin: auto;
-}
-
 mat-slider {
     width: 100%;
     margin-top: 12px;
+}
+
+.centered-buttons {
+    justify-content: center;
 }
