--- a/webapp/src/app/modals/new-course/new-course-dialog.component.html
+++ b/webapp/src/app/modals/new-course/new-course-dialog.component.html
@@ -46,7 +46,7 @@
   </form>
 </div>
 
-<div mat-dialog-actions align="end">
-  <button mat-button color="warn" (click)="dialogRef.close()">Back</button>
+<div mat-dialog-actions class="centered-buttons">
+  <button mat-button color="warn" (click)="dialogRef.close()">Close</button>
   <button mat-button color="primary" (click)="onSubmit()">Create</button>
 </div>
