--- a/webapp/src/app/professor/assignments/tab-assignments.component.html
+++ b/webapp/src/app/professor/assignments/tab-assignments.component.html
@@ -1,25 +1,36 @@
 <div class="container">
-    <h2>Assignments</h2>
+
+    <h2>Published Assignments</h2>
+
+    <button mat-raised-button color="primary"
+            [routerLink]=""
+            [queryParams]="{ addAssignment: true }">New Assignment</button>
 
     <!-- Assignments in course table -->
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
         <!-- Assignment Serial Column -->
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
         <!-- Assignment NAME Column -->
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
-        <!-- Assignment PATH Column -->
-        <ng-container matColumnDef="professor">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Professor</th>
-            <td mat-cell *matCellDef="let element"> {{element.professor ? element.professor.name : ''}} </td>
+        <!-- Assignment RELEASE_DATE Column -->
+        <ng-container matColumnDef="releaseDate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Release Date</th>
+            <td mat-cell *matCellDef="let element"> {{element.releaseDate}} </td>
+        </ng-container>
+
+        <!-- Assignment DUE_DATE Column -->
+        <ng-container matColumnDef="dueDate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Date</th>
+            <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
